--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.16.2",
     "bootstrap-vue": "^0.18.0",
     "element-ui": "^1.4.1",
-    "nuxt": "latest"
+    "nuxt": "latest",
+    "vue-bulma-message": "^1.1.1",
+    "vue-bulma-notification": "^1.1.1"
   },
   "scripts": {
     "dev": "nuxt",
